k8s/base/ingress.yaml
# FIXME: Add Ingress controller setup and configuration
# FIXME: consolidate me after installing Ingress controller via Helm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: todo
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: todod
                namespace: todo
                port:
                  number: todo.todod-port
            path: /
